--- a/package.json
+++ b/package.json
@@ -1,57 +1,65 @@
 {
-  "name": "github-search",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@types/jest": "^26.0.9",
-    "@types/node": "^14.0.27",
-    "@types/react": "^16.9.44",
-    "@types/react-dom": "^16.9.8",
-    "@types/react-window": "^1.8.2",
-    "axios": "^0.19.2",
-    "lodash.debounce": "^4.0.8",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-redux": "^7.2.1",
-    "react-scripts": "^3.4.1",
-    "react-spinkit": "^3.0.0",
-    "react-virtualized-auto-sizer": "^1.0.2",
-    "react-window": "^1.8.5",
-    "redux": "^4.0.5",
-    "redux-saga": "^1.1.3",
-    "redux-thunk": "^2.3.0",
-    "styled-components": "^5.1.1",
-    "typescript": "^3.9.7"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "flow": "flow"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "eslint-config-airbnb": "18.2.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-config-prettier-react": "^0.0.24",
-    "eslint-plugin-flowtype": "^5.2.0",
-    "eslint-plugin-html": "^6.0.2",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.20.5",
-    "eslint-plugin-react-hooks": "^4.0.8"
-  }
+	"name": "github-search",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"axios": "^0.19.2",
+		"lodash.debounce": "^4.0.8",
+		"react": "^16.13.1",
+		"react-dom": "^16.13.1",
+		"react-redux": "^7.2.1",
+		"react-scripts": "^3.4.1",
+		"react-spinkit": "^3.0.0",
+		"react-virtualized-auto-sizer": "^1.0.2",
+		"react-window": "^1.8.5",
+		"redux": "^4.0.5",
+		"redux-saga": "^1.1.3",
+		"redux-thunk": "^2.3.0",
+		"styled-components": "^5.1.1",
+		"typescript": "^3.9.7"
+	},
+	"scripts": {
+		"start": "react-scripts start",
+		"build": "react-scripts build",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject",
+		"format": "prettier --write src/**/*.ts{,x}",
+		"lint": "tsc --noEmit && eslint src/**/*.ts{,x}"
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	},
+	"devDependencies": {
+		"@types/lodash.debounce": "^4.0.6",
+		"@types/react": "^16.9.44",
+		"@types/react-dom": "^16.9.8",
+		"@types/react-redux": "^7.1.9",
+		"@types/react-spinkit": "^3.0.6",
+		"@types/react-virtualized-auto-sizer": "^1.0.0",
+		"@types/react-window": "^1.8.2",
+		"@types/styled-components": "^5.1.2",
+		"@typescript-eslint/eslint-plugin": "^3.8.0",
+		"@typescript-eslint/parser": "^2.34.0",
+		"babel-eslint": "^10.1.0",
+		"eslint": "^6.8.0",
+		"eslint-config-airbnb": "^18.2.0",
+		"eslint-config-airbnb-typescript": "^9.0.0",
+		"eslint-config-prettier": "^4.3.0",
+		"eslint-config-react-app": "^5.2.1",
+		"eslint-plugin-import": "^2.22.0",
+		"eslint-plugin-jsx-a11y": "^6.3.1",
+		"eslint-plugin-prettier": "^3.1.4",
+		"eslint-plugin-react": "^7.20.5",
+		"eslint-plugin-react-hooks": "^2.0.0",
+		"prettier": "^1.19.1"
+	}
 }
