--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"@reduxjs/toolkit": "^1.4.0",
 		"axios": "^0.19.2",
 		"lodash.debounce": "^4.0.8",
 		"react": "^16.13.1",
@@ -24,7 +25,7 @@
 		"test": "react-scripts test",
 		"eject": "react-scripts eject",
 		"format": "prettier --write src/**/*.ts{,x}",
-		"lint": "tsc --noEmit && eslint src/**/*.ts{,x}"
+		"lint": "tsc --noEmit && eslint src/**/*.ts{,x}, src/**/*.js{,x}"
 	},
 	"browserslist": {
 		"production": [
@@ -47,7 +48,7 @@
 		"@types/react-virtualized-auto-sizer": "^1.0.0",
 		"@types/react-window": "^1.8.2",
 		"@types/styled-components": "^5.1.2",
-		"@typescript-eslint/eslint-plugin": "^3.8.0",
+		"@typescript-eslint/eslint-plugin": "^2.34.0",
 		"@typescript-eslint/parser": "^2.34.0",
 		"babel-eslint": "^10.1.0",
 		"eslint": "^6.8.0",
@@ -55,6 +56,7 @@
 		"eslint-config-airbnb-typescript": "^9.0.0",
 		"eslint-config-prettier": "^4.3.0",
 		"eslint-config-react-app": "^5.2.1",
+		"eslint-plugin-flowtype": "^4.0.0",
 		"eslint-plugin-import": "^2.22.0",
 		"eslint-plugin-jsx-a11y": "^6.3.1",
 		"eslint-plugin-prettier": "^3.1.4",
