--- a/.eslintrc
+++ b/.eslintrc
@@ -2,18 +2,18 @@
   "parser": "@typescript-eslint/parser",
   "extends": [
     "airbnb-typescript",
-    "airbnb/hooks",
+    "plugin:react/recommended",
     "plugin:@typescript-eslint/recommended",
+    "plugin:prettier/recommended",
     "prettier",
     "prettier/react",
-    "prettier/@typescript-eslint",
-    "plugin:prettier/recommended"
+    "prettier/@typescript-eslint"
   ],
   "env": {
     "browser": true,
     "es6": true
   },
-  "plugins": ["react", "@typescript-eslint"],
+  "plugins": ["@typescript-eslint"],
   "parserOptions": {
     "ecmaFeatures": {
       "jsx": true
