fix lint script

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
 		"test": "react-scripts test",
 		"eject": "react-scripts eject",
 		"format": "prettier --write src/**/*.ts{,x}",
-		"lint": "tsc --noEmit && eslint src/**/*.ts{,x}, src/**/*.js{,x}"
+		"lint": "tsc --noEmit && eslint src/**/*.ts{,x}"
 	},
 	"browserslist": {
 		"production": [
