--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		]
 	},
 	"devDependencies": {
+		"@types/parse-link-header": "^1.0.0",
 		"@types/react": "^16.9.44",
 		"@types/react-dom": "^16.9.8",
 		"@types/react-redux": "^7.1.9",
