--- a/.eslintrc
+++ b/.eslintrc
@@ -1,33 +1,45 @@
 {
-  "parser": "@typescript-eslint/parser",
-  "extends": [
-    "airbnb-typescript",
-    "plugin:react/recommended",
-    "plugin:@typescript-eslint/recommended",
-    "plugin:prettier/recommended",
-    "prettier",
-    "prettier/react",
-    "prettier/@typescript-eslint"
-  ],
-  "env": {
-    "browser": true,
-    "es6": true
-  },
-  "plugins": ["@typescript-eslint"],
-  "parserOptions": {
-    "ecmaFeatures": {
-      "jsx": true
-    },
-    "ecmaVersion": 2018,
-    "sourceType": "module",
-    "project": "./tsconfig.json"
-  },
-  "rules": {
-    "react/jsx-props-no-spreading": [
-      2,
-      {
-        "custom": "ignore"
-      }
-    ]
-  }
+	"extends": [
+		"react-app",
+		"airbnb",
+		"plugin:@typescript-eslint/recommended"
+	],
+	"overrides": [
+		{
+			"files": [
+				"**/*.ts?(x)"
+			],
+			"rules": {
+				"react/jsx-filename-extension": [
+					1,
+					{
+						"extensions": [
+							".tsx"
+						]
+					}
+				],
+				"import/extensions": [
+					"error",
+					"ignorePackages",
+					{
+						"ts": "never",
+						"tsx": "never"
+					}
+				]
+			}
+		}
+	],
+	"settings": {
+		"import/parsers": {
+			"@typescript-eslint/parser": [
+				".ts",
+				".tsx"
+			]
+		},
+		"import/resolver": {
+			"typescript": {
+				"alwaysTryTypes": true
+			}
+		}
+	}
 }
