--- a/package.json
+++ b/package.json
@@ -49,11 +49,11 @@
 		"@typescript-eslint/eslint-plugin": "^3.9.0",
 		"@typescript-eslint/parser": "^2.34.0",
 		"babel-eslint": "^10.1.0",
-		"eslint": "^7.2.0",
 		"eslint-config-airbnb": "^18.2.0",
 		"eslint-config-airbnb-typescript": "^9.0.0",
 		"eslint-config-prettier": "^4.3.0",
 		"eslint-config-react-app": "^5.2.1",
+		"eslint-import-resolver-typescript": "^2.2.1",
 		"eslint-plugin-flowtype": "^4.0.0",
 		"eslint-plugin-import": "^2.22.0",
 		"eslint-plugin-jsx-a11y": "^6.3.1",
