--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"@material-ui/lab": "^4.0.0-alpha.56",
 		"@reduxjs/toolkit": "^1.4.0",
 		"axios": "^0.19.2",
+		"axios-cache-adapter": "^2.5.0",
 		"parse-link-header": "^1.0.1",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
