--- a/.eslintrc
+++ b/.eslintrc
@@ -17,7 +17,10 @@
             "ts": "never",
             "tsx": "never"
           }
-        ]
+				],
+				"react/jsx-props-no-spreading": ["error", {
+					"custom": "ignore"
+				}]
       }
     }
   ],
