--- a/.eslintrc
+++ b/.eslintrc
@@ -17,10 +17,13 @@
             "ts": "never",
             "tsx": "never"
           }
-				],
-				"react/jsx-props-no-spreading": ["error", {
-					"custom": "ignore"
-				}]
+        ],
+        "react/jsx-props-no-spreading": [
+          "error",
+          {
+            "custom": "ignore"
+          }
+        ]
       }
     }
   ],
